--- a/W2/index.html
+++ b/W2/index.html
@@ -7,7 +7,8 @@
     <script src="main.js"></script>
 </head>
 <body>
-  <h1>My Total is </h1> 
+  <h1>myHeading.textContent =const myHeading;
+    </h1> 
   <h2></h2>
 </body>
 </html>
