--- a/W2/index.html
+++ b/W2/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>myHeading.textContent 
+    </title>
     <script src="main.js"></script>
 </head>
 <body>
-  <h1>myHeading.textContent =const myHeading;
-    </h1> 
+  <h1>My total is: </h1> 
   <h2></h2>
 </body>
 </html>
