--- a/W2/index.html
+++ b/W2/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>myHeading.textContent 
-    </title>
+    <title>Total Number Display</title>
     <script src="main.js"></script>
 </head>
 <body>
-  <h1>My total is: </h1> 
+  <h1>Your Total is: <span id="total-output">0</span </h1> 
+  <script> src=src="main.js"></script>
+</script>
   <h2></h2>
 </body>
 </html>
