updated output to DOM

--- a/w4/index.html
+++ b/w4/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>week 3 Code Along - Primetives</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <title>week 4 - Cardon Footprint</title>
     <script defer src="main.js"></script>
-</head>
-<body>
-    <h1></h1>
-</body>
+  </head>
+  <body>
+    <div id="output">
+    </div>
+  </body>
 </html>
