--- a/w16/index.html
+++ b/w16/index.html
@@ -1,125 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carbon Footprint Assessment</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #000; /* Black background */
-        color: #fff; /* White text */
-        margin: 20px;
-      }
-      form {
-        margin-bottom: 20px;
-        padding: 15px;
-        border: 1px solid #ffc107; /* Yellow border */
-        border-radius: 5px;
-        background-color: #111; /* Dark background */
-      }
-      form label {
-        display: block;
-        margin-bottom: 5px;
-        font-weight: bold;
-        color: #ffc107; /* Yellow text */
-      }
-      form input,
-      form select {
-        width: 100%;
-        padding: 8px;
-        margin-bottom: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        background-color: #222;
-        color: #fff;
-      }
-      form button {
-        width: 100%;
-        padding: 10px;
-        background-color: #ffc107; /* Yellow button */
-        border: none;
-        border-radius: 5px;
-        color: #000;
-        font-weight: bold;
-        cursor: pointer;
-      }
-      form button:hover {
-        background-color: #e0a800; /* Darker yellow */
-      }
-      table {
-        width: 100%;
-        margin-top: 20px;
-        border-collapse: collapse;
-        color: #fff;
-      }
-      th, td {
-        padding: 10px;
-        border: 1px solid #ffc107;
-        text-align: left;
-      }
-      th {
-        background-color: #ffc107;
-        color: #000;
-      }
-    </style>
-  </head>
-  <body>
-    <form id="carbon-footprint-form">
-      <fieldset>
-        <legend>Input Carbon Footprint</legend>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Carbon Footprint Assessment</title>
+  <style>
+    /* General styling */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f9; /* Light grey background */
+      color: #333; /* Dark text */
+      margin: 20px;
+    }
 
-        <label for="firstname">First Name:</label>
-        <input type="text" id="firstname" name="firstname" required />
+    /* Form container styling */
+    form {
+      margin-bottom: 20px;
+      padding: 20px;
+      border: 1px solid #4CAF50; /* Green border */
+      border-radius: 5px;
+      background-color: #ffffff; /* White background */
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-        <label for="lastname">Last Name:</label>
-        <input type="text" id="lastname" name="lastname" required />
+    /* Label styling */
+    form label {
+      display: block;
+      margin-bottom: 8px;
+      font-weight: bold;
+      color: #4CAF50; /* Green text */
+    }
 
-        <label for="housem">Household Members:</label>
-        <input type="number" id="housem" name="housem" min="1" max="10" required />
+    /* Input and select field styling */
+    form input,
+    form select {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
 
-        <label for="house">House Size:</label>
-        <select id="house" name="house" required>
-          <option value="">--- Select house size ---</option>
-          <option value="apt">Apartment</option>
-          <option value="small">Small</option>
-          <option value="medium">Medium</option>
-          <option value="large">Large</option>
-        </select>
+    /* Button styling */
+    form button {
+      padding: 10px;
+      width: 100%;
+      background-color: #4CAF50; /* Green button */
+      border: none;
+      border-radius: 5px;
+      color: #fff;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
 
-        <label for="dishwasher">Dishwasher Usage:</label>
-        <select id="dishwasher" name="dishwasher" required>
-          <option value="">--- Dishwasher usage ---</option>
-          <option value="0">No dishwasher</option>
-          <option value="1">1-3 times/week</option>
-          <option value="2">4-9 times/week</option>
-          <option value="3">More than 9 times/week</option>
-        </select>
+    form button:hover {
+      background-color: #45a049; /* Darker green on hover */
+    }
 
-        <label for="washingMachine">Washing Machine Usage:</label>
-        <select id="washingMachine" name="washingMachine" required>
-          <option value="">--- Washing machine usage ---</option>
-          <option value="0">No washing machine</option>
-          <option value="1">1-3 times/week</option>
-          <option value="2">4-9 times/week</option>
-          <option value="3">More than 9 times/week</option>
-        </select>
+    /* Table styling */
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      background-color: #ffffff; /* White table background */
+      color: #333;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-        <label for="householdPurchases">Annual Household Purchases:</label>
-        <select id="householdPurchases" name="householdPurchases" required>
-          <option value="">--- Select an option ---</option>
-          <option value="0-10">0-10 purchases</option>
-          <option value="11-50">11-50 purchases</option>
-          <option value="51-100">51-100 purchases</option>
-          <option value="101+">101+ purchases</option>
-        </select>
+    th, td {
+      border: 1px solid #ddd;
+      padding: 10px;
+      text-align: left;
+    }
 
-        <button type="submit">Submit</button>
-      </fieldset>
-    </form>
+    th {
+      background-color: #4CAF50; /* Green header */
+      color: #fff;
+    }
 
-    <div id="results">
-      <!-- Rendered table data will be added here dynamically -->
-    </div>
-  </body>
+    /* Table footer styling */
+    tfoot td {
+      font-weight: bold;
+      text-align: right;
+      background-color: #f4f4f9;
+    }
+  </style>
+</head>
+<body>
+  <form id="carbon-footprint-form">
+    <fieldset>
+      <legend>Input Carbon Footprint</legend>
+
+      <label for="firstname">First Name:</label>
+      <input type="text" id="firstname" name="firstname" required />
+
+      <label for="lastname">Last Name:</label>
+      <input type="text" id="lastname" name="lastname" required />
+
+      <label for="housem">Household Members:</label>
+      <input type="number" id="housem" name="housem" min="1" max="10" required />
+
+      <label for="house">House Size:</label>
+      <select id="house" name="house" required>
+        <option value="">--- Select house size ---</option>
+        <option value="apt">Apartment</option>
+        <option value="small">Small</option>
+        <option value="medium">Medium</option>
+        <option value="large">Large</option>
+      </select>
+
+      <label for="dishwasher">Dishwasher Usage:</label>
+      <select id="dishwasher" name="dishwasher" required>
+        <option value="">--- Dishwasher usage ---</option>
+        <option value="none">No dishwasher</option>
+        <option value="1-3">1-3 times/week</option>
+        <option value="4-9">4-9 times/week</option>
+        <option value="9+">More than 9 times/week</option>
+      </select>
+
+      <label for="washingMachine">Washing Machine Usage:</label>
+      <select id="washingMachine" name="washingMachine" required>
+        <option value="">--- Washing machine usage ---</option>
+        <option value="none">No washing machine</option>
+        <option value="1-3">1-3 times/week</option>
+        <option value="4-9">4-9 times/week</option>
+        <option value="9+">More than 9 times/week</option>
+      </select>
+
+      <label for="householdPurchases">Household Purchases:</label>
+      <select id="householdPurchases" name="householdPurchases" required>
+        <option value="">--- Number of household purchases ---</option>
+        <option value="0-10">0-10 items/year</option>
+        <option value="11-50">11-50 items/year</option>
+        <option value="51-100">51-100 items/year</option>
+        <option value="101+">101+ items/year</option>
+      </select>
+
+      <button type="submit">Submit</button>
+    </fieldset>
+  </form>
+
+  <div id="results">
+    <!-- Rendered table data will be added here dynamically -->
+  </div>
+</body>
 </html>
